# GaugereaderProject

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  architecture.ods  config.py  configaws  find_needle.py  main.py  pyproject.toml  requirements.txt  settings.toml  todo.todo
GaugereaderProject/src/gauges/: gauge.py
data/cameras/camera_001/gauge_001/: .~lock.train.csv#  gauge_params.xml  test.csv  train.csv
data/gauges/camera_1/gauge_1/: report.csv  (+7 more)
data/models/: gauge_net_v1.0.pt
data/xml_files/: camera_1_analog_gauge_1  camera_1_analog_gauge_1.xml  camera_1_analog_gauge_11.xml  camera_1_analog_gauge_13.xml  camera_1_analog_gauge_2.xml  camera_1_analog_gauge_3.xml  camera_1_analog_gauge_4  camera_1_analog_gauge_4.xml  camera_1_analog_gauge_5.xml  camera_1_analog_gauge_8.xml
demo/: calibrate_gauge_demo.py  full_demo.py
docs/: layers_design.xlsx  poster_gauge_Guy_Dahan.pptx
src/: test.py
src/calibration_data/: cal_data.py
src/calibrator/: analog_frames.py  app.py  circle_dectection.py  tktest.py
src/cameras/: camera.py
src/frames/: read_stream.py  video_stream.py
src/gauges/: gauge.py
src/model/: dataset_class.py  gauge_net.py  test_model.py  train_model.py  train_set_generator.py
src/reader/: input_output.py
src/utils/: circle_dectection.py  convert_xml.py  envconfig.py  image_editing.py  input_output.py  point_math.py  test.xml  text_xml.py  ui_tester.py
tests/: batch_train.py  calibrate_gauge_test.py  full_demo.py  get_reading.py  image_editing_test.ipynb  main_test.py  train_from_file.py  train_new_gauge.py  ui_tester.py
(+28 files in other folders)
